--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
 <html>
     <head>
 
-        <title>Anyja link</title>
+        <!DOCTYPE HTML>
+<html>
+    <head>
+        <title>Anyja Website</title>
+    </head>
+
+    <body>
+      <div id="all-contents">
+
+      </div>
+    </body>
+</html
     </head>
     <style>
         body {
-            background: rgb(125, 198, 205);
+            background:lightpurple;
+        
             color: rgb(45, 45, 45);
             padding: 10px;
             font-family: arial;
