--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 
         /* navigation menu */
         nav {
-            background: rgb(239, 80, 41);
+            background: rgb(41, 87, 239);
             margin: 0 auto;
             display: flex;
             padding: 10px;
@@ -29,7 +29,7 @@
         h1 {
             display: flex;
             align-items: center;
-            color: rgb(255, 255, 255);
+            color: rgba(255, 255, 255, 0.308);
             flex: 1;
             margin: 0;
         }
@@ -47,13 +47,16 @@
 
         /* main container area beneath menu */
         main {
-            background: rgb(245, 238, 219);
+            background: rgba(219, 222, 245, 0.582);
             display: flex;
         }
         .content {
+            flex: 1;
+            padding: 15px;
+        }
                    /* portfolio styles */
          .content h1 {
-             color: black;
+             color: rgba(0, 0, 0, 0.568);
          }
 
          #portfolio {
@@ -76,9 +79,6 @@
              text-decoration: none;
              color: #454545;
          }
-            flex: 1;
-            padding: 15px;
-        }
     </style>
                     </head>
                 
